<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cdevtech.translation.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/words_entered_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/speak_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speak_button"
        android:layout_below="@+id/words_entered_edit_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="acceptSpeechInput" />

    <Button
        android:id="@+id/translate_json_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate_json_button_text"
        android:layout_below="@+id/speak_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onTranslateJsonClick" />

    <Button
        android:id="@+id/translate_xml_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate_xml_button_text"
        android:layout_below="@+id/translate_json_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onTranslateXmlClick" />

    <Spinner
        android:id="@+id/lang_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/translate_xml_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/language_array"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/read_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_button"
        android:layout_below="@+id/lang_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="readTheText" />

    <TextView
        android:id="@+id/translated_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translation_text_view"
        android:layout_below="@+id/read_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>
</RelativeLayout>
